<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <POU Name="FB_ResetNC" Id="{d5a33439-9af6-4b4b-814e-6ef8d170f497}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_ResetNC IMPLEMENTS I_Reset
VAR
    {attribute 'no_copy'}
    AxisRef : REFERENCE TO AXIS_REF;
    fbMcReset 	: MC_Reset;
    bExecute : BOOL;
    bError : BOOL;
    bBusy : BOOL;
    bDone : BOOL;
    nErrorID : UDINT;
    sMessage : T_MAXSTRING;
    rtDone : R_TRIG;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[THIS^.fbMcReset(
    Axis := THIS^.AxisRef,
    Execute := THIS^.bExecute (* AND Axis.Status.Error*),
    Done => THIS^.bDone,
    Busy => THIS^.bBusy,
    Error => THIS^.bError,
    ErrorID => THIS^.nErrorID,
);

rtDone(CLK:=bDone);
IF  rtDone.Q THEN
    THIS^.bExecute := FALSE;
END_IF]]></ST>
    </Implementation>
    <Property Name="ExecReset" Id="{ddc8bd17-a518-4a3f-a1a8-d54d38c1c9b9}">
      <Declaration><![CDATA[PROPERTY ExecReset : BOOL
]]></Declaration>
      <Set Name="Set" Id="{d7a6e541-aed3-420a-99ea-708e491008c0}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[bExecute := ExecReset;]]></ST>
        </Implementation>
      </Set>
    </Property>
    <Method Name="FB_Init" Id="{0ffde760-6475-4a6a-8e1c-babbb252f4cc}">
      <Declaration><![CDATA[METHOD FB_Init : BOOL
VAR_INPUT
    bInitRetains : BOOL; // if TRUE, the retain variables are initialized (warm start / cold start)
    bInCopyCode : BOOL;  // if TRUE, the instance afterwards gets moved into the copy code (online change)
    AxisRef : REFERENCE TO AXIS_REF;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[THIS^.AxisRef REF= AxisRef;]]></ST>
      </Implementation>
    </Method>
    <Method Name="Reset" Id="{b05fc0aa-59e5-483e-8e1e-55eb45708bf0}">
      <Declaration><![CDATA[METHOD Reset
VAR_INPUT
    Execute	: BOOL;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[THIS^.bExecute := Execute;]]></ST>
      </Implementation>
    </Method>
    <Property Name="ResetBusy" Id="{5f2cceba-7134-4efe-8841-ecba923dca52}">
      <Declaration><![CDATA[PROPERTY ResetBusy : BOOL
]]></Declaration>
      <Get Name="Get" Id="{85f46149-33a8-4c33-ba36-19cb1218e31e}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[ResetBusy := bBusy;]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Property Name="ResetDone" Id="{83716cc5-e3e4-4a0e-9a01-85c819af47e4}">
      <Declaration><![CDATA[{warning 'add property implementation'}
PROPERTY ResetDone : BOOL
]]></Declaration>
      <Get Name="Get" Id="{d0f9a103-0936-46aa-8fa2-cde1fa260a72}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[ResetDone := bDone;]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Property Name="ResetError" Id="{78cdb70e-09fe-40ab-8a68-7cb4953ca907}">
      <Declaration><![CDATA[{warning 'add property implementation'}
PROPERTY ResetError : BOOL
]]></Declaration>
      <Get Name="Get" Id="{2ba6de77-2d92-47f3-802e-65abb1e872ab}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[ResetError := bError;]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Property Name="ResetErrorID" Id="{bfe921c1-e744-48fe-ba23-596c2a44a3af}">
      <Declaration><![CDATA[{warning 'add property implementation'}
PROPERTY ResetErrorID : UDINT
]]></Declaration>
      <Get Name="Get" Id="{50a11289-cfb4-4cf4-a1ea-ea391b17d488}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[ResetErrorID := nErrorID;]]></ST>
        </Implementation>
      </Get>
    </Property>
  </POU>
</TcPlcObject>